(feature: custom text directive):  - create a directive to replace default text with custom text  - add list-view and custom directive routing on nav-bar  - style nav-bar

--- a/src/app/shared/ui/nav-bar/nav-bar.component.html
+++ b/src/app/shared/ui/nav-bar/nav-bar.component.html
@@ -1,3 +1,8 @@
 <mat-toolbar [@fadeInOut]>
-    <span>Frontend Interview</span>
+    <span class="logo" [routerLink]="'/'">Frontend Interview</span>
+
+    <span class="flexExpand"></span>
+
+    <a class="nav-link mr" [routerLink]="'/list-view'" routerLinkActive="active">List View</a>
+    <a class="nav-link" [routerLink]="'/custom-directive'" routerLinkActive="active">Data View</a>
 </mat-toolbar>
